@@ -1,4 +1,9 @@
 v0.3.0 - XXX, xxx
+  - Added DefaultHandler:
+     ESCAPE: director.pop
+     MOD_ACCEL + f: Toggles Fullscreen
+     MOD_ACCEL + p: Toggles Pause
+     MOD_ACCEL + w: Toggles wireframe mode
   - alpha blending eanabled by default. 
     use director.set_alpha_bleding(True|False) to change.
   - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
